Java 8 compatibility (#9)
Closes #7